@@ -10,6 +10,7 @@ Engine changes
 * Fix registering quest to the launcher at quest install time (#948).
 * Fix crash when a carried bomb explodes (#953).
 * Fix crash when a scrolling teletransporter is incorrectly placed (#977).
+* Fix crash when an entity has a wrong savegame variable type (#1008).
 * Fix memory leak when creating lots of surfaces (#962).
 * Fix cleanup of the quest files at exit.
 * Fix error in sol.main.load_settings() when the file does not exist.
